k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
  namespace: micro-notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
      - name: notes-frontend
        image: ghcr.io/Manuelo Salumbides II/micro-notes-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend
  namespace: micro-notes
spec:
  selector:
    app: notes-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
