k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-notes-ingress
  namespace: micro-notes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: micro-notes.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: notes-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-frontend
            port:
              number: 80
